# FYP

./: README.md  analytics_engine.py  app.py  dash_app.py  database.db  inventory_model.py  pyproject.toml  sales_prediction_model.py
instance/: database.db  users.db
static/css/: styles.css
static/js/: enhanced_dashboard.js  script.js
templates/: contact-us.html  dashboard.html  enhanced_dashboard.html  features-overview.html  index.html  inventory.html  login.html  sales.html  signup.html
