[project]
name = "fyp-py"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "dash>=2.9.3",
    "dash-bootstrap-components>=1.7.1",
    "fastapi[standard]>=0.115.12",
    "flask>=3.1.1",
    "ipython>=8.37.0",
    "langgraph>=0.1.5",
    "numpy>=2.2.6",
    "pandas>=2.3.0",
    "passlib[bcrypt]==1.7.4",
    "plotly>=6.1.2",
    "prophet>=1.1.7",
    "pydantic[email]==2.5.0",
    "pydash>=8.0.5",
    "pyjwt>=2.10.1",
    "python-jose[cryptography]==3.3.0",
    "python-multipart>=0.0.20",
    "requests>=2.32.3",
    "scikit-learn>=1.7.0",
    "setuptools<81",
    "uvicorn[standard]==0.24.0",
    "werkzeug>=3.1.3",
]
